--- a/Ark Ascended Tools/Changelog.txt
+++ b/Ark Ascended Tools/Changelog.txt
@@ -1,5 +1,5 @@
-v3.4.0\n
-     - Complete rework of "Anti AFK" code\n
-     - Added Eat / Drink timer input to "Anti AFK"\n
-     - Added ability to only Move or Eat / Drink to\n
-      "Anti AFK" (Should add more functionality)\n
+v3.4.0
+     - Complete rework of "Anti AFK" code
+     - Added Eat / Drink timer input to "Anti AFK"
+     - Added ability to only Move or Eat / Drink to
+       "Anti AFK" (Should add more functionality)
