--- a/Ark Ascended Tools/Changelog.txt
+++ b/Ark Ascended Tools/Changelog.txt
@@ -1,4 +1,4 @@
-v3.4.0
+New Version v3.4.0 is available
      - Complete rework of "Anti AFK" code
      - Added Eat / Drink timer input to "Anti AFK"
      - Added ability to only Move or Eat / Drink to
