--- a/Ark Ascended Tools/Changelog.txt
+++ b/Ark Ascended Tools/Changelog.txt
@@ -3,7 +3,10 @@ New Version v3.4.0 is available
      - Added Eat / Drink timer input to "Anti AFK"
      - Added ability to only Move or Eat / Drink to
        "Anti AFK" (Should add more functionality)
-v3.4.0
+
+
+         New Version v3.4.0 is avaiable
+Changes include:
      - Complete rework of "Anti AFK" code
      - Added Eat / Drink timer input to "Anti AFK"
      - Added ability to only Move or Eat / Drink to
