--- a/Ark Ascended Tools/Changelog.txt
+++ b/Ark Ascended Tools/Changelog.txt
@@ -1,4 +1,3 @@
-New Version v4.0.3 is available
+New Version v4.0.4 is available
 
-- Minor changes to User Guide
-- Minor fix to disable debug mode
+- Added support for 3840x1080 resolution
