--- a/Ark Ascended Tools/Changelog.txt
+++ b/Ark Ascended Tools/Changelog.txt
@@ -1,3 +1,7 @@
-New Version v4.0.4 is available
-
-- Added support for 3840x1080 resolution
+New Version v4.1.0 is available
+- Added AZERTY support to "Magic INI"
+- Added support for 3840x2160 and 3840x1080
+  resolutions to "AFK Club ARK"
+- Minor fix for 3840x1080 "Auto Join Server"
+- Further adjustments to 1920x1080 for "AFK
+  Club ARK" (Should be more consistent)
